# particle_swarm_optimization

./: CMakeLists.txt  README.md  dockmanager.cpp  dockmanager.h  dockwidget.cpp  dockwidget.h  exception.cpp  exception.h  function.cpp  function.h  functioneditdialog.cpp  functioneditdialog.h  functionmanagerdialog.cpp  functionmanagerdialog.h  functionoptionswidget.cpp  functionoptionswidget.h  functionviewer.cpp  functionviewer.h  graphwidget.cpp  graphwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  particle.cpp  particle.h  particleviewwidget.cpp  particleviewwidget.h  subprocess.cpp  subprocess.h  swarm.h  swarmcontrolwidget.cpp  swarmcontrolwidget.h  variationcontrolwidget.cpp  variationcontrolwidget.h  vector.h  vectorn.h
cmake_modules/: FindQwt.cmake
data/: db.txt
docs/: README.md  README_BASE.md
